[Fix] -> When class ast-left-align-sub-menu is added to the parent submenu, it automatically left aligns all the child submenus.

--- a/assets/css/unminified/style.css
+++ b/assets/css/unminified/style.css
@@ -2540,7 +2540,9 @@ body {
     right: auto;
   }
   .main-header-menu .sub-menu li.ast-left-align-sub-menu:hover > ul,
-  .main-header-menu .sub-menu li.ast-left-align-sub-menu.focus > ul {
+  .main-header-menu .sub-menu li.ast-left-align-sub-menu.focus > ul,
+  .main-header-menu .sub-menu li.ast-left-align-sub-menu:hover * ul,
+  .main-header-menu .sub-menu li.ast-left-align-sub-menu:hover * ul {
     left: -100%;
   }
   .main-header-menu .sub-menu .main-header-menu li.ast-sub-menu-goes-outside:hover > ul,
