--- a/sass/site/navigation/_primary-menu.scss
+++ b/sass/site/navigation/_primary-menu.scss
@@ -69,7 +69,9 @@
 				}
 
 				&.ast-left-align-sub-menu:hover > ul,
-				&.ast-left-align-sub-menu.focus > ul {
+				&.ast-left-align-sub-menu.focus > ul,
+				&.ast-left-align-sub-menu:hover * ul,
+				&.ast-left-align-sub-menu:hover * ul {
 					left: -100%;
 				}
 			}
